chore: deploy vercel

--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,10 @@
   ],
   "env": {
     "BUN_BIN": "/opt/bun"
+  },
+  "functions": {
+    "index.ts": {
+      "runtime": "vercel-node"
+    }
   }
 }
