--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "start": "bun run index.ts"
+    "start": "bun run index.ts",
+    "build": "curl -fsSL https://bun.sh/install | bash && bun install"
   },
   "dependencies": {
     "bun": "latest"
